# cmake-sandbox

./: .gitmodules  CMakeLists.txt  README.md  setup.bat
template/: CMakeLists.txt  template.cpp
